# Machine-Learning-University-Operationalizing-Generative-AI-with-LLMOps-Course

KoachangMLUCourseLLMOps/: .gitignore  README.md  brazil.ion  pyproject.toml  requirements.txt  tasks.py
KoachangMLUCourseLLMOps/configuration/Packaging/: CloudFormation.yml
KoachangMLUCourseLLMOps/src/koachang_mlu_course_llm_ops/: __init__.py  handler.py
KoachangMLUCourseLLMOps/test/: README.md  test_basic_llm_service.py
KoachangMLUCourseLLMOpsCDK/: .gitignore  README.md  brazil.ion  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
KoachangMLUCourseLLMOpsCDK/.amazon/: updatabot-config.ion
KoachangMLUCourseLLMOpsCDK/Packaging/: CloudFormation.yml
KoachangMLUCourseLLMOpsCDK/lambda/kendra-data-source-sync/: index.py
KoachangMLUCourseLLMOpsCDK/lib/: app.ts  dataStack.ts  monitoringStack.ts  serviceStack.ts
KoachangMLUCourseLLMOpsCDK/private/coverage/: clover.xml  cobertura-coverage.xml  coverage-final.json  coverage-summary.json  dataStack.ts.html  index.html  serviceStack.ts.html
KoachangMLUCourseLLMOpsCDK/test/: dataStack.test.ts  serviceStack.test.ts
KoachangMLUCourseLLMOpsData/: README.md  brazil.ion
KoachangMLUCourseLLMOpsExperiment/: .gitignore  README.md  brazil.ion  pyproject.toml  requirements.txt  tasks.py
KoachangMLUCourseLLMOpsExperiment/example_data/: lambda_deploy_to_multiple_architectures.txt
KoachangMLUCourseLLMOpsExperiment/notebooks/: MLU-LLMOps-Lab1.ipynb  MLU-LLMOps-Lab2.ipynb  MLU-LLMOps-Lab3.ipynb  experiment.ipynb
KoachangMLUCourseLLMOpsExperiment/notebooks/scripts/: llmops_dev_env_setup.sh  mlu_llmops_install.sh
KoachangMLUCourseLLMOpsExperiment/notebooks/solutions/: lab1_ex1_solutions.txt  lab1_ex2_solutions.txt  lab1_ex2_solutions2.txt  lab1_ex3_solutions.txt  lab1_ex4_solutions.txt  lab2_ex2_handler.txt  lab2_ex2_tests.txt  lab3_ex1_solutions.txt  lab3_ex2_solutions.txt
KoachangMLUCourseLLMOpsExperiment/src/amzn_personal_playground/: __init__.py  model.py  scoring.py
KoachangMLUCourseLLMOpsTests/: .gitignore  README.md  brazil.ion  pyproject.toml  requirements.txt  tasks.py
KoachangMLUCourseLLMOpsTests/configuration/Packaging/: CloudFormation.yml
KoachangMLUCourseLLMOpsTests/configuration/data/: flock-dataset.jsonl
KoachangMLUCourseLLMOpsTests/src/koachang_mlu_course_llm_ops_tests/: flock_custom_evaluator.py  test_invoke_function.py
