[project]
name = "amzn-koachang-mlu-course-llm-ops"
version = "0.1"
dependencies = [
    "aws-lambda-powertools == 2.11.0",
    "boto3 >=1.34.143",
    "langchain >= 0.2.6",
    "langchain-aws >= 0.1.9",
    "langchain-community >= 0.2.6",
]


[project.optional-dependencies]
tests = [
    "pytest >= 6",
    "pytest-cov",
    "pytest-xdist", # Used for guard and parallel testing when needed
    "coverage[toml]",
    "pytest-env",
]
dev = [
    "invoke",
    "awscurl",
]


[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
    "mypy == 1.7.0",
]
build-backend = "setuptools.build_meta"


[tool.perupy-delegate]
command = "invoke compile"

# Specifies the additional options to pass to `pip install`
# The default value is "-e .[dev]"
install = "-e .[dev] -r requirements.txt"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)


[tool.pytest_env]
AWS_REGION = "fake-region"
# Kendra's Index ID must have 36 characters or more.
KENDRA_INDEX_ID = "fake-kendra-index-id-lorem-ipsum-dolor-sit-amet"
GUARDRAIL_ID = "fake-guardrail-id"
GUARDRAIL_VERSION = "fake-guardrail-version"

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
files = [ "src/**/*.py" ]


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["koachang_mlu_course_llm_ops"]


[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "--color=yes",
    "--cov",
    "--cov-report=html:build/brazil-documentation/coverage",
    "--cov-report=xml:build/brazil-documentation/coverage/coverage.xml",
    "--cov-report=term-missing"
]
testpaths = [ "test" ]
looponfailroots = [ "src", "test" ]


[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [ "koachang_mlu_course_llm_ops" ]


[tool.coverage.paths]
source = [
    "src/",
    "**/site-packages/"
    ]

[tool.coverage.report]
show_missing = true
fail_under = 80
